<resources>
    <string name="app_name">EjemploBasic</string>
    <string name="textoBoton">Click</string>
    <string name="texto">Saludos</string>
    <string name="action_settings">Settings</string>
    <string name="pruebaTexto">Hola holita</string>
    <string name="Mensaje">Escribe aqui</string>
    <string name="Rojo">Rojo</string>
    <string name="Amarillo">Amarillo</string>
    <string name="Internete">20min</string>
    <string name="Sumatorio">Suma</string>
    <string name="Voler">volver</string>
    <string name="camara">CAMARA</string>
</resources>
